--- a/homework/index.html
+++ b/homework/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="turned on light bulb with a suit/>
+            <img src="./assets/images/brand-awareness.png" alt="turned on light bulb with a suit"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
